--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,7 @@ on:
     types: [opened, synchronize]
 
 jobs:
-  test-solutions:
+  run_tests:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
