--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,5 +17,7 @@ jobs:
           architecture: 'x64'
       - name: Install pytest
         run: pip install -U pytest
+      - name: Install dependencies
+        run: pip install -r requirements.txt
       - name: Run tests
         run: make pytest
